# env-code

javascript/bun/: SECURITY.md  bunfig.toml  package-lock.json  package.json
javascript/bun/.mise-tasks/: dev.sh  install.sh
javascript/pnpm/: .eslintrc.yml  .mise.toml  README.md  SECURITY.md  index.js  package.json  pnpm-workspace.yaml
javascript/pnpm/.mise-tasks/: dev.sh  pnpm-install.sh
python/uv/: README.md  mise.toml  pyproject.toml
