[project]
name = "placeholder name"
version = "0.1.0"
description = "description here"
readme = "README.md"
authors = [{ name = "matchaboar", email = "matchaboar@email.com" }]
requires-python = "==3.11.*"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.12.8",
]
